# cobot-segmentation-pick-place

bot1_pkg/: CMakeLists.txt  package.xml
bot1_pkg/launch/: gui_order.launch
bot1_pkg/map/: map.pgm
bot1_pkg/scripts/: backup1.py  backup2.py  backup3.py  backup5_canceltrial.py  order_navigation.py  testpy.py
cobot_moveit/: CMakeLists.txt  package.xml
cobot_moveit/src/: moveit_control.py  mycobot_slider.py
cobot_moveit/src/my_model3/: keras_metadata.pb
cobot_moveit/src/my_model3/variables/: variables.data-00000-of-00001  variables.index
cobot_moveit/srv/: cali_service_msg.srv  find_tf_service.srv  grip_service_msg.srv  main_service_msg.srv  second_service_msg.srv
mycobot_ros/mycobot_320/new_mycobot_320/scripts/: asdfdd.py  data_list.csv  mc_angles.csv  mycobot_320_slider (copy).py  mycobot_320_slider.py  mycobot_320_slider_real.py  mycobot_320_slider_tmp.py
mycobot_ros/mycobot_320/new_mycobot_320/scripts/my_model/: saved_model.pb
mycobot_ros/mycobot_320/new_mycobot_320/scripts/my_model/variables/: variables.data-00000-of-00001  variables.index
mycobot_ros/mycobot_320/new_mycobot_320/scripts/my_model2/: saved_model.pb
mycobot_ros/mycobot_320/new_mycobot_320/scripts/my_model2/variables/: variables.data-00000-of-00001  variables.index
mycobot_ros/mycobot_320/new_mycobot_320/scripts/my_model3/: saved_model.pb
mycobot_ros/mycobot_320/new_mycobot_320_gripper_moveit/config/: firefighter.srdf
mycobot_ros/mycobot_320/new_mycobot_320_moveit/config/: chomp_planning.yaml  firefighter.srdf  kinematics.yaml  ros_controllers.yaml
mycobot_ros/mycobot_320/new_mycobot_320_moveit/launch/: demo.launch  demo_gazebo.launch  moveit.rviz  mycobot320_moveit.launch
mycobot_ros/mycobot_description/urdf/mycobot_320_m5_2022/: closet.dae  dressme.dae  gripper_camera.dae  new_mycobot_pro_320_m5_2022.urdf  new_mycobot_pro_320moveit_m5_2022.urdf  new_mycobot_pro_320moveit_m5_2022_fake.urdf
old/: aruco_tf.py  find_recent_pose.py
qt_subscriber/: CMakeLists.txt  package.xml  setup.py
qt_subscriber/msg/: CompressedImage.msg
qt_subscriber/src/: GUI.py  GUI_cv_test.py
qt_subscriber/src/qt_subscriber/: GUI_ros_test.py  main.ui  pick.ui  pick_window.py  poppy.ui  poppy_window.py  put.ui  put_window.py
qt_subscriber/srv/: SegImageService.srv  second_service_msg.srv
test_code/: moveit_disable_collision.py  moveit_get_position.py  moveit_set_position.py  moveit_set_value.py
vision_seg/: CMakeLists.txt  package.xml
vision_seg/launch/: vision_seg.launch
vision_seg/msg/: aruco_center.msg  seg_center.msg
vision_seg/src/: arucoTfPub.cpp  aruco_tf.py  cameraPub.cpp  camera_pub.py  findNearAruco.cpp  find_recent_pose.py  plcControl.py  seg_pose.py  seg_tf.py
vision_seg/srv/: SegImageService.srv  find_tf_service.srv
